--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Benvenuto</h1>
 <p>Sei nella mia home inutile.<p>
-
+<p>
+    Clicca qui per vedere <a href="/home/chi_siamo">CHI SIAMO</a></p>
+    <p>Posso creare un link anche cosi:
+    <%= link_to 'CHI SIAMO', '/home/chi_siamo' %>
+</p>
